test/fail/suggest-short-ai.mo
//MOC-FLAG --ai-errors
import Prim "mo:⛔";

Prim.s;
